hphp/test/zend/bad/ext/reflection/tests/ReflectionExtension_isPersistant.php
<?php
$obj = new ReflectionExtension('reflection');
var_dump($obj->isPersistent());
?>
==DONE==
